--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,4 +28,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: NVM
